// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag <Tag label="foo" /> should render a tag with the label foo 1`] = `
<span
  className="woocommerce-tag"
>
  <span
    className="woocommerce-tag__text"
    id="woocommerce-tag__label-0"
  >
    <span
      className="screen-reader-text"
    >
      foo
    </span>
    <span
      aria-hidden="true"
    >
      foo
    </span>
  </span>
</span>
`;

exports[`Tag <Tag label="foo" popoverContents={ <p>This is a popover</p> } /> should render a tag with a popover 1`] = `
<span
  className="woocommerce-tag"
>
  <button
    className="components-button woocommerce-tag__text"
    id="woocommerce-tag__label-2"
    onClick={[Function]}
    type="button"
  >
    <span
      className="screen-reader-text"
    >
      foo
    </span>
    <span
      aria-hidden="true"
    >
      foo
    </span>
  </button>
</span>
`;

exports[`Tag <Tag label="foo" remove={ noop } /> should render a tag with a close button 1`] = `
<span
  className="woocommerce-tag has-remove"
>
  <span
    className="woocommerce-tag__text"
    id="woocommerce-tag__label-1"
  >
    <span
      className="screen-reader-text"
    >
      foo
    </span>
    <span
      aria-hidden="true"
    >
      foo
    </span>
  </span>
  <button
    aria-describedby="woocommerce-tag__label-1"
    aria-label="Remove foo"
    className="components-button woocommerce-tag__remove"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="clear-icon"
      focusable={false}
      height={20}
      role="img"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
      />
    </svg>
  </button>
</span>
`;

exports[`Tag <Tag label="foo" screenReaderLabel="FooBar" /> should render a tag with a screen reader label 1`] = `
<span
  className="woocommerce-tag"
>
  <span
    className="woocommerce-tag__text"
    id="woocommerce-tag__label-3"
  >
    <span
      className="screen-reader-text"
    >
      FooBar
    </span>
    <span
      aria-hidden="true"
    >
      foo
    </span>
  </span>
</span>
`;
